@@ -1,15 +1,18 @@
 package com.hdmbe.company.service;
 
+import java.util.List;
+import java.util.stream.Collectors;
+
 import com.hdmbe.company.dto.CompanyRequestDto;
 import com.hdmbe.company.dto.CompanyResponseDto;
 import com.hdmbe.company.entity.Company;
-import com.hdmbe.company.entity.CompanySupplyTypeMap;
 import com.hdmbe.company.entity.CompanySupplyCustomerMap;
+import com.hdmbe.company.entity.CompanySupplyTypeMap;
+import com.hdmbe.company.repository.CompanySupplyCustomerMapRepository;
+import com.hdmbe.company.repository.CompanySupplyTypeMapRepository;
 import com.hdmbe.supplyType.entity.SupplyType;
 import com.hdmbe.SupplyCustomer.entity.SupplyCustomer;
 import com.hdmbe.company.repository.CompanyRepository;
-import com.hdmbe.company.repository.CompanySupplyTypeMapRepository;
-import com.hdmbe.company.repository.CompanySupplyCustomerMapRepository;
 import com.hdmbe.supplyType.repository.SupplyTypeRepository;
 import com.hdmbe.SupplyCustomer.repository.SupplyCustomerRepository;
 import com.hdmbe.supplyType.service.SupplyTypeService;
@@ -22,9 +25,22 @@ import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import com.hdmbe.SupplyCustomer.entity.SupplyCustomer;
+import com.hdmbe.SupplyCustomer.repository.SupplyCustomerRepository;
+import com.hdmbe.company.dto.CompanyRequestDto;
+import com.hdmbe.company.dto.CompanyResponseDto;
+import com.hdmbe.company.entity.Company;
+import com.hdmbe.company.entity.CompanySupplyCustomerMap;
+import com.hdmbe.company.entity.CompanySupplyTypeMap;
+import com.hdmbe.company.repository.CompanyRepository;
+import com.hdmbe.company.repository.CompanySupplyCustomerMapRepository;
+import com.hdmbe.company.repository.CompanySupplyTypeMapRepository;
+import com.hdmbe.supplyType.entity.SupplyType;
+import com.hdmbe.supplyType.repository.SupplyTypeRepository;
+
+import java.time.LocalDate;
 import java.math.BigDecimal;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -39,37 +55,39 @@ public class CompanyService {
     // 등록
     @Transactional
     public CompanyResponseDto create(CompanyRequestDto request) {
-            validateCreate(request);
+        validateCreate(request);
 
-        // SupplyType 찾기: ID가 있으면 ID로, 없으면 이름으로 찾기
+        // SupplyType 찾기
         SupplyType supplyType;
         if (request.getSupplyTypeId() != null) {
             supplyType = supplyTypeRepository.findById(request.getSupplyTypeId())
                     .orElseThrow(() -> new IllegalArgumentException("공급 유형을 찾을 수 없습니다"));
         } else if (request.getSupplyTypeName() != null && !request.getSupplyTypeName().isEmpty()) {
-            List<SupplyType> types = supplyTypeRepository.findAll();
-            supplyType = types.stream()
+            supplyType = supplyTypeRepository.findAll().stream()
                     .filter(t -> t.getSupplyTypeName().equals(request.getSupplyTypeName()))
                     .findFirst()
                     .orElseThrow(() -> new IllegalArgumentException("공급 유형을 찾을 수 없습니다: " + request.getSupplyTypeName()));
         } else {
-            throw new IllegalArgumentException("공급 유형 ID 또는 이름이 필요합니다");
+            throw new IllegalArgumentException("공급 유형 ID 또는 이름 필요");
         }
 
-        // SupplyCustomer 찾기: ID가 있으면 ID로, 없으면 이름으로 찾기
+        // SupplyCustomer 찾기
         SupplyCustomer supplyCustomer;
         if (request.getCustomerId() != null) {
             supplyCustomer = supplyCustomerRepository.findById(request.getCustomerId())
                     .orElseThrow(() -> new IllegalArgumentException("공급 고객을 찾을 수 없습니다"));
         } else if (request.getCustomerName() != null && !request.getCustomerName().isEmpty()) {
-            List<SupplyCustomer> customers = supplyCustomerRepository.findAll();
-            supplyCustomer = customers.stream()
+            supplyCustomer = supplyCustomerRepository.findAll().stream()
                     .filter(c -> c.getCustomerName().equals(request.getCustomerName()))
                     .findFirst()
                     .orElseThrow(() -> new IllegalArgumentException("공급 고객을 찾을 수 없습니다: " + request.getCustomerName()));
         } else {
-            throw new IllegalArgumentException("공급 고객 ID 또는 이름이 필요합니다");
+            throw new IllegalArgumentException("공급 고객 ID 또는 이름 필요");
         }
+
+        // 주소
+//        String address = (request.getRegion() != null ? request.getRegion() : "")
+//                + (request.getDetailAddress() != null ? " " + request.getDetailAddress() : "");
 
         Company company = Company.builder()
                 .companyName(request.getCompanyName())
@@ -80,105 +98,161 @@ public class CompanyService {
 
         companyRepository.save(company);
 
-        // 매핑 데이터 생성
-        CompanySupplyTypeMap supplyTypeMap = CompanySupplyTypeMap.builder()
+        // SupplyTypeMap 생성
+        CompanySupplyTypeMap typeMap = CompanySupplyTypeMap.builder()
                 .company(company)
                 .supplyType(supplyType)
                 .build();
-        companySupplyTypeMapRepository.save(supplyTypeMap);
+        companySupplyTypeMapRepository.save(typeMap);
 
-        CompanySupplyCustomerMap supplyCustomerMap = CompanySupplyCustomerMap.builder()
+        // SupplyCustomerMap 생성
+        CompanySupplyCustomerMap customerMap = CompanySupplyCustomerMap.builder()
                 .company(company)
                 .supplyCustomer(supplyCustomer)
                 .build();
-        companySupplyCustomerMapRepository.save(supplyCustomerMap);
+        companySupplyCustomerMapRepository.save(customerMap);
 
-        return CompanyResponseDto.fromEntity(company);
-        }
+        return CompanyResponseDto.fromEntity(company, typeMap, customerMap);
+    }
 
-//    // 전체 조회, 검색
-//    @Transactional(readOnly = true)
-//    public Page<CompanyResponseDto> search(
-//            String companyName,
-//            String supplyTypeId,
-//            String supplyCustomerId,
-//            String address,
-//            String keyword,
-//            int page,
-//            int size) {
-//        Pageable pageable = PageRequest.of(page, size, Sort.by("id").ascending());
-//
-//        Page<Company> result = companyRepository.search(
-//                companyName,
-//                supplyTypeId,
-//                supplyCustomerId,
-//                address,
-//                keyword,
-//                pageable);
-//
-//        return result.map(CompanyResponseDto::fromEntity);
-//    }
+    // 전체 조회, 검색
+    @Transactional(readOnly = true)
+    public Page<CompanyResponseDto> search(
+            String companyName,
+            String supplyTypeName,
+            String supplyCustomerName,
+            String address,
+            String keyword,
+            int page,
+            int size) {
+        System.out.println("[CompanyService] 협력사 검색 요청 - companyName: " + companyName
+                + ", supplyTypeName: " + supplyTypeName
+                + ", supplyCustomerName: " + supplyCustomerName
+                + ", address: " + address
+                + ", keyword: " + keyword
+                + ", page: " + page + ", size: " + size);
+
+        Pageable pageable = PageRequest.of(page, size, Sort.by("id").ascending());
+
+        Page<Company> result = companyRepository.search(
+                companyName,
+                supplyTypeName,
+                supplyCustomerName,
+                address,
+                keyword,
+                pageable
+        );
+
+        System.out.println("[CompanyService] 협력사 검색 결과 - 총 개수: " + result.getTotalElements()
+                + ", 현재 페이지 개수: " + result.getNumberOfElements());
+
+        return result.map(company -> {
+            CompanySupplyTypeMap typeMap = companySupplyTypeMapRepository.findByCompanyAndEndDateIsNull(company).orElse(null);
+            CompanySupplyCustomerMap customerMap = companySupplyCustomerMapRepository.findByCompanyAndEndDateIsNull(company).orElse(null);
+            return CompanyResponseDto.fromEntity(company, typeMap, customerMap);
+        });
+    }
 
     // 전체 조회 (드롭다운용)
     @Transactional(readOnly = true)
     public List<CompanyResponseDto> getAll() {
         return companyRepository.findAll().stream()
-                .map(CompanyResponseDto::fromEntity)
-                .collect(Collectors.toList());
+                .map(company -> {
+                    CompanySupplyTypeMap typeMap = companySupplyTypeMapRepository.findByCompanyAndEndDateIsNull(company).orElse(null);
+                    CompanySupplyCustomerMap customerMap = companySupplyCustomerMapRepository.findByCompanyAndEndDateIsNull(company).orElse(null);
+                    return CompanyResponseDto.fromEntity(company, typeMap, customerMap);
+                })
+                .toList();
     }
 
     // 단일 수정
     public CompanyResponseDto updateSingle(Long id, CompanyRequestDto dto) {
-        Company company = companyRepository.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException("협력사 없음"));
-
         validateUpdate(dto);
+        Company company = companyRepository.findById(id)
+                .orElseThrow(() -> new EntityNotFoundException("협력사 없음 id=" + id));
 
+        // 업체명
         if (dto.getCompanyName() != null) {
             company.setCompanyName(dto.getCompanyName());
         }
 
-//        if (dto.getSupplyTypeId() != null) {
-//            SupplyType supplyType = supplyTypeRepository.findById(dto.getSupplyTypeId())
-//                    .orElseThrow(() -> new EntityNotFoundException("공급 유형 없음"));
-//            company.setSupplyType(supplyType);
-//        }
-//
-//        if (dto.getCustomerId() != null) {
-//            SupplyCustomer supplyCustomer = supplyCustomerRepository.findById(dto.getCustomerId())
-//                    .orElseThrow(() -> new EntityNotFoundException("공급 고객 없음"));
-//            company.setSupplyCustomer(supplyCustomer);
-//        }
-
+        // 편도거리
         if (dto.getOneWayDistance() != null) {
             company.setOneWayDistance(dto.getOneWayDistance());
         }
 
-        if (dto.getAddress() != null) {
-            company.setAddress(dto.getAddress());
-        }
-
+        // 비고
         if (dto.getRemark() != null) {
             company.setRemark(dto.getRemark());
         }
 
-        return CompanyResponseDto.fromEntity(company);
+        // 주소 (region + detailAddress → address)
+        if (dto.getRegion() != null || dto.getDetailAddress() != null) {
+            String address
+                    = (dto.getRegion() != null ? dto.getRegion() : "")
+                    + (dto.getDetailAddress() != null ? " " + dto.getDetailAddress() : "");
+            company.setAddress(address.trim());
+        }
+
+        // 공급 유형 변경
+        if (dto.getSupplyTypeId() != null) {
+            companySupplyTypeMapRepository.findByCompanyAndEndDateIsNull(company)
+                    .ifPresent(map -> map.setEndDate(LocalDate.now()));
+            SupplyType type = supplyTypeRepository.findById(dto.getSupplyTypeId())
+                    .orElseThrow(() -> new IllegalArgumentException("공급유형 없음"));
+            CompanySupplyTypeMap typeMap = CompanySupplyTypeMap.builder()
+                    .company(company)
+                    .supplyType(type)
+                    .build();
+            companySupplyTypeMapRepository.save(typeMap);
+        }
+
+        // 공급 고객 변경
+        if (dto.getCustomerId() != null) {
+            companySupplyCustomerMapRepository.findByCompanyAndEndDateIsNull(company)
+                    .ifPresent(map -> map.setEndDate(LocalDate.now()));
+            SupplyCustomer customer = supplyCustomerRepository.findById(dto.getCustomerId())
+                    .orElseThrow(() -> new IllegalArgumentException("공급고객 없음"));
+            CompanySupplyCustomerMap customerMap = CompanySupplyCustomerMap.builder()
+                    .company(company)
+                    .supplyCustomer(customer)
+                    .build();
+            companySupplyCustomerMapRepository.save(customerMap);
+        }
+
+        CompanySupplyTypeMap typeMap = companySupplyTypeMapRepository.findByCompanyAndEndDateIsNull(company).orElse(null);
+        CompanySupplyCustomerMap customerMap = companySupplyCustomerMapRepository.findByCompanyAndEndDateIsNull(company).orElse(null);
+
+        return CompanyResponseDto.fromEntity(company, typeMap, customerMap);
     }
 
     // 전체 수정
     @Transactional
     public List<CompanyResponseDto> updateMultiple(List<CompanyRequestDto> requests) {
         return requests.stream()
+                .peek(this::validateUpdate)
                 .map(req -> updateSingle(req.getId(), req))
                 .toList();
     }
 
-    // 삭제
+    // 단일 삭제
     @Transactional
-    public void delete(Long id) {
+    public void deleteSingle(Long id) {
         Company company = companyRepository.findById(id)
                 .orElseThrow(() -> new EntityNotFoundException("협력사 id 없음 =" + id));
         companyRepository.delete(company);
+    }
+
+    // 다중 삭제
+    @Transactional
+    public void deleteMultiple(List<Long> ids) {
+        if (ids == null || ids.isEmpty()) {
+            return;
+        }
+
+        for (Long id : ids) {
+            deleteSingle(id);
+        }
     }
 
     private void validateCreate(CompanyRequestDto request) {
@@ -199,8 +273,9 @@ public class CompanyService {
             throw new IllegalArgumentException("편도거리 필수");
         }
 
-        if (request.getAddress() == null || request.getAddress().isBlank())
+        if (request.getAddress() == null || request.getAddress().isBlank()) {
             throw new IllegalArgumentException("주소 필수");
+        }
     }
 
     private void validateUpdate(CompanyRequestDto request) {
